web/libraries/fractal/components/tests/filter/pass/split.twig
{% set foo = "one,two,three"|split(',') %}
{# foo contains ['one', 'two', 'three'] #}

{{ foo|join('|') }}
