web/libraries/fractal/components/tests/filter/fail/column.twig
{% set items = [
  { 'fruit': 'apple' },
  { 'fruit': 'orange' }
] %}

{% set fruits = items|column('fruit') %}

{# fruits now contains ['apple', 'orange'] #}
